<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="paulrachwalski.uiuc.datacollectionframework.Activities.NewProjectActivity">

    <TextView

        android:id="@+id/project_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/project_name_label"
        android:textSize="22dp"
        android:textColor="@color/text_main"/>

    <EditText
        android:id="@+id/project_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_name_label"
        android:hint="@string/project_name_hint"
        android:textColor="@color/text_main"/>
    
    <TextView
        android:id="@+id/user_id_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_name_editText"
        android:layout_marginTop="20dp"

        android:text="@string/user_id_label"
        android:textSize="22dp"
        android:textColor="@color/text_main"/>

    <EditText
        android:id="@+id/user_id_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_id_label"
        android:hint="@string/user_id_hint"
        android:textColor="@color/text_main"/>

    <Button
        android:id="@+id/create_project_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_id_editText"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/round_rect_button"

        android:text="@string/create_new_project_label"
        android:textColor="@color/button_text"/>

</RelativeLayout>
