<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="paulrachwalski.uiuc.datacollectionframework.Activities.SummaryActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:textSize="24sp"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        android:text="@string/data_collection_summary"/>

    <TextView
        android:id="@+id/project_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text"
        android:layout_marginTop="35dp"

        android:textSize="18sp"
        android:textColor="@color/text_main"
        android:text="@string/project_name"/>

    <TextView
        android:id="@+id/project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text"
        android:layout_toRightOf="@id/project_name_text"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="15dp"

        android:textSize="20sp"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        android:text="project name"/>


    <TextView
        android:id="@+id/user_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_name_text"
        android:layout_marginTop="20dp"

        android:textSize="18sp"
        android:textColor="@color/text_main"
        android:text="@string/user_id"/>

    <TextView
        android:id="@+id/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_name_text"
        android:layout_toRightOf="@id/user_id_text"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"

        android:textSize="20sp"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        android:text="user_id"/>

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_id_text"
        android:layout_marginTop="40dp"

        android:textSize="18sp"
        android:textColor="@color/text_main"
        android:text="@string/date"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_id_text"
        android:layout_toRightOf="@id/date_text"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"

        android:textSize="20sp"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        android:text="Jan. 1, 2014"/>

    <TextView
        android:id="@+id/start_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_text"
        android:layout_marginTop="40dp"

        android:textSize="18sp"
        android:textColor="@color/text_main"
        android:text="@string/start_time"/>

    <TextView
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_text"
        android:layout_toRightOf="@id/start_time_text"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"

        android:textSize="20sp"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        android:text="12 : 35 : 12.743 PM"/>

    <TextView
        android:id="@+id/end_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_time_text"
        android:layout_marginTop="20dp"

        android:textSize="18sp"
        android:textColor="@color/text_main"
        android:text="@string/end_time"/>

    <TextView
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_time_text"
        android:layout_toRightOf="@id/end_time_text"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"

        android:textSize="20sp"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        android:text="12 : 38 : 34.174 PM"/>

    <TextView
        android:id="@+id/number_labels_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/end_time_text"
        android:layout_marginTop="40dp"

        android:textSize="18sp"
        android:textColor="@color/text_main"
        android:text="@string/number_of_labels"/>

    <TextView
        android:id="@+id/number_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/end_time_text"
        android:layout_toRightOf="@id/number_labels_text"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"

        android:textSize="20sp"
        android:textColor="@color/text_main"
        android:textStyle="bold"
        android:text="14"/>

</RelativeLayout>
